src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__float64__cast_float64_to_int64__impl.snap
---
source: src/expr/src/scalar/func/impls/float64.rs
expression: info
---
Info {
    output_type_nullable: SqlColumnType {
        scalar_type: Int64,
        nullable: true,
    },
    output_type_nonnullable: SqlColumnType {
        scalar_type: Int64,
        nullable: false,
    },
    preserves_uniqueness: false,
    inverse: Some(
        CastInt64ToFloat64(
            CastInt64ToFloat64,
        ),
    ),
    is_monotone: true,
    propagates_nulls: true,
    introduces_nulls: false,
    could_error: true,
}
